# country_acronyms

./: .gitignore  LICENCE  README.md  setup.cfg
src/country_acronyms/: __init__.py  acronyms.py
src/country_acronyms.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
