[metadata]
name = country_acronyms
version = 0.0.7
author = Adam Mikulasek
author_email = mikulasek.adam@gmail.com
description = All possible translations, acronyms for a specific country name / country iso
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ad4mk0/country_acronyms
project_urls =
    Bug Tracker = https://github.com/Ad4mk0/country_acronyms/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
